Rating de Game ahora se actualiza correctamente, Games ahora se edita correctamente, ReviewPosts y su logica ahora funcionan correctamente